--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -18,7 +18,7 @@
           <li url="./form.html">表单</li>
           <li url="./frozen.html">Frozen and Editable</li>
           <li url="./plan.html">入库计划</li>
-          <li>Shirts</li>
+          <li url="./gridLink.html">grid联动</li>
           <li>Belts</li>
           <li>Socks</li>
           <li>Fan Zone</li>
