--- a/src/demo/frozen.html
+++ b/src/demo/frozen.html
@@ -31,7 +31,7 @@
     editable: true,
     columns: [{
       field: "OrderID",
-      title: $t('orderId'),
+      title: $t('frozen','orderId'),
       locked: true,
       lockable: false,
       width: 150
