修改明细css的bug

--- a/src/demo/plan.html
+++ b/src/demo/plan.html
@@ -2,26 +2,24 @@
   <h1 class="form-title">入库计划明细</h1>
   <div id="validation-success"></div>
   <nav id="stepper"></nav>
-  <div class="form-content">
-    <ul id="panelbar">
-      <li id="item1">基本信息
-        <div>
-          <form id="exampleform"></form>
-        </div>
-      </li>
-      <li id="item3">计划明细
-        <div>
-          <div id="info-grid"></div>
-        </div>
-      </li>
-    </ul>
-    <div id="dialog"></div>
-    <div class="oper-btn">
-      <button title="保存"><i class="fa fa-save"></i></button>
-      <button title="关闭"><i class="fa fa-close"></i></button>
-      <button title="提交"><i class="fa fa-check"></i></button>
-      <button title="刷新"><i class="fa fa-bath"></i></button>
-    </div>
+  <ul id="panelbar">
+    <li id="item1">基本信息
+      <div>
+        <form id="exampleform"></form>
+      </div>
+    </li>
+    <li id="item3">计划明细
+      <div>
+        <div id="info-grid"></div>
+      </div>
+    </li>
+  </ul>
+  <div id="dialog"></div>
+  <div class="oper-btn">
+    <button title="保存"><i class="fa fa-save"></i></button>
+    <button title="关闭"><i class="fa fa-close"></i></button>
+    <button title="提交"><i class="fa fa-check"></i></button>
+    <button title="刷新"><i class="fa fa-bath"></i></button>
   </div>
 </div>
 <script type="text/javascript">
@@ -287,50 +285,62 @@
       },
       {
         field: "status",
+        width: 150,
         title: "状态" 
       },
       {
         field: "code",
+        width: 150,
         title: "物料代码"
       },
       {
         field: "name",
+        width: 150,
         title: "物料名称"
       },
       {
         field: "authentication_status",
+        width: 150,
         title: "认证状态"
       },
       {
         field: "quality_flag",
+        width: 150,
         title: "品质"
       },
       {
         field: "plan_pack_qty",
+        width: 150,
         title: "收货预定包装数"
       },
       {
         field: "plan_qty",
+        width: 150,
         title: "收货预定个数"
       },
       {
         field: "plan_total_qty",
+        width: 150,
         title: "收货预定总数"
       },
       {
         field: "unit",
+        width: 150,
         title: "基本单位"
       },
       {
         field: "min_sale_number",
+        width: 150,
         title: "最小销售数"
       },
       {
         field: "standard_package_number",
+        width: 150,
         title: "标准包装数"
       },
       {
         field: "is_process",
+        width: 150,
         title: "是否加工"
       },
       // {
