--- a/src/demo/window.html
+++ b/src/demo/window.html
@@ -14,28 +14,28 @@
       // },
       data: [
         {
-          OrderID: 1,
-          name: 'WX-IN-201801250001',
+          code: 'P10100001',
+          name: '零部件3PN-1+A+A',
           barCode: '1',
-          quality_flag: 'A',
-          authentication_state: '新建',
-          location_area_id: '1',
-          location_id: '1',
-          available_pack_qty: '1',
-          available_qty: '1',
-          available_total_qty: '1'
+          quality_flag: '合格',
+          authentication_state: '试作',
+          location_area_id: 'AF',
+          location_id: 'AF1-1',
+          available_pack_qty: 100,
+          available_qty: 100,
+          available_total_qty: 2000
         },
         {
-          OrderID: 2,
-          name: 'WX-IN-201801250002',
+          code: 'P10100001',
+          name: '零部件3防污帽φ14.5',
           barCode: '2',
-          quality_flag: 'B',
-          authentication_state: '新建',
-          location_area_id: '2',
-          location_id: '2',
-          available_pack_qty: '2',
-          available_qty: '2',
-          available_total_qty: '2'
+          quality_flag: '不合格',
+          authentication_state: '量产',
+          location_area_id: 'BH',
+          location_id: 'BH1-i',
+          available_pack_qty: 200,
+          available_qty: 0,
+          available_total_qty: 2000
         }
       ],
       serverPaging: true,
@@ -45,7 +45,7 @@
       // filter: { field: "EmployeeID", operator: "eq", value: data.EmployeeID },
       schema: {
         model: {
-          id: 'OrderID'
+          id: 'code'
         }
       }
     },
@@ -54,17 +54,17 @@
     },
     columns: [
       // { selectable:true, width:50 },
-      { field: "OrderID", title: "物料代码" },
-      { field: "name", title: "物料名称" },
-      { field: "barCode", title: "商品条码" },
-      { field: "quality_flag", title: "品质" },
-      { field: "authentication_state", title: "认证状态"},
-      { field: "location_area_id", title: "货区"},
-      { field: "location_id", title: "货位"},
+      { field: "code", title: "物料代码", width: 100 },
+      { field: "name", title: "物料名称", width: 100},
+      { field: "barCode", title: "商品条码", width: 100 },
+      { field: "quality_flag", title: "品质", width: 100 },
+      { field: "authentication_state", title: "认证状态", width: 100},
+      { field: "location_area_id", title: "货区", width: 100},
+      { field: "location_id", title: "货位", width: 100},
       // { field: "ShipName", title: "货位", editor: categoryDropDownEditor, template: "#=Category.CategoryName#"},
-      { field: "available_pack_qty", title: "可用包装数"},
-      { field: "available_qty", title: "可用个数"},
-      { field: "available_total_qty", title: "可用总数"}
+      { field: "available_pack_qty", title: "可用包装数", width: 100},
+      { field: "available_qty", title: "可用个数", width: 100},
+      { field: "available_total_qty", title: "可用总数", width: 100}
     ],
     pageable: {
       pageSize: 10,
@@ -105,8 +105,8 @@
     $("#info-grid").data("kendoGrid").expandRow($("#info-grid").find("tr.k-master-row")[index]);
     var sel_data = $(".pos").data("sel_data");
     $.each(sel_data, function (i, item) {
-      if ((ids[parentId]).indexOf(item.OrderID) == -1) {
-        ids[parentId].push(item.OrderID);
+      if ((ids[parentId]).indexOf(item.code) == -1) {
+        ids[parentId].push(item.code);
         info_data[parentId].push(item);
       }
       $(".k-detail-row .k-i-reload").click();
